2008-02-14  Kenichi Handa  <handa@ni.aist.go.jp>

	* coding.c (decode_coding_object, encode_coding_object):
	Preserve Vdeactivate_mark.  Delete unnecessary call of Fcurrent_buffer.

2008-02-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* coding.c (coding_set_destination): Use BEG_BYTE rather than
	hardcoding 1.
	(detect_coding_system):
	* lisp.h (detect_coding_system, chars_in_text, multibyte_chars_in_text)
	(string_char_to_byte, string_byte_to_char, insert_from_gap):
	* insdel.c (insert_from_gap):
	* fns.c (string_char_byte_cache_charpos, string_char_byte_cache_bytepos)
	(string_char_to_byte, string_byte_to_char, string_make_multibyte)
	(string_to_multibyte):
	* character.c (chars_in_text, multibyte_chars_in_text):
	* fileio.c (Finsert_file_contents): Use EMACS_INT for buffer positions.

	* character.h (FETCH_STRING_CHAR_ADVANCE)
	(FETCH_STRING_CHAR_AS_MULTIBYTE_ADVANCE)
	(FETCH_STRING_CHAR_ADVANCE_NO_CHECK): Use SDATA and SREF.
	(DEC_POS, BUF_DEC_POS): Use BEG_BYTE rather than hardcoding 1.

	* casefiddle.c (casify_region): Only call after-change and composition
	functions on the part of the region that was changed.

	* keyboard.c (read_avail_input):
	* frame.c (Fdelete_frame): Call Fdelete_terminal.

2008-02-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* buffer.c (clone_per_buffer_values, reset_buffer_local_variables)
	(Fbuffer_local_value, Fbuffer_local_variables): Don't forget undo_list.

2008-02-11  Juanma Barranquero  <lekktu@gmail.com>

	* w32menu.c (push_submenu_start, push_submenu_end)
	(push_left_right_boundary, push_menu_pane, push_menu_item):
	* keyboard.c (read_key_sequence): Don't pass args with side effects
	to AREF, it fails when compiling with -DENABLE_CHECKING.

2008-02-11  Kenichi Handa  <handa@ni.aist.go.jp>

	* Makefile.in (${lispsource}international/charprop.el):
	Delete this target.

	* search.c (boyer_moore): Fix incorrect synching of the trunk and
	emacs-unicode-2.

2008-02-11  Stefan Monnier  <monnier@iro.umontreal.ca>
