@@ -1,3 +1,8 @@
+2008-02-14  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* fileio.c (Finsert_file_contents): Adjust offsets when replacing
+	within a narrowed buffer.
+
 2008-02-14  Kenichi Handa  <handa@ni.aist.go.jp>
 
 	* coding.c (decode_coding_object, encode_coding_object):
